Bug 156561 - NVDA doesn't announce popup content when it's made visible after the parent widget
Summary: NVDA doesn't announce popup content when it's made visible after the parent w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0 target:7.5.6 target:7.6.1
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-08-01 06:48 UTC by Michael Weghorn
Modified: 2025-08-23 20:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-08-01 06:48:08 UTC
This is a more technical issue and a follow-up ticket for tdf#140762, tdf#152671, tdf#154470 and tdf#156100.

As described in tdf#140762 and tdf#152671, the NVDA screen reader on Windows did not announce the content e.g. for the borders toolbar popup or the auto filter dropdown in Calc when the popup was only shown after the corresponding border window.

This was adressed in 

    commit dc0706cabfe39ddb6ea23d60ccfb756f2b9e6efb
    Author: Michael Weghorn
    Date:   Wed Mar 15 17:00:27 2023 +0100

        tdf#140762 tdf#152671 Make dock win visible before showing popup

, but that also caused side-effects for gtk3 (s. tdf#154470 and tdf#156100).

In my understanding, announcement should generally also have worked without the above commit in place, so this ticket is to keep track of addressing the underlying issues for that, in particular, because tdf#156100 will also require further modification to the current state to unbreak the RTL case for gtk3.

Steps to reproduce:

1) in a local LO build, revert 57c2209dd04abfda90e0aba782bc174243633ec9 ("tdf#154470 try moving the Show of the client to after the float positioning") and dc0706cabfe39ddb6ea23d60ccfb756f2b9e6efb ("tdf#140762 tdf#152671 Make dock win visible before showing popup") and build LibreOffice
2) Retest tdf#140762 and tdf#152671

Actual result: The issues described in tdf#140762 and tdf#152671 still occur.

Expected result: The issues should not occur, the content in the popup should properly be announced by NVDA, as it is before reverting the commits.

Tested with a local Windows development build with git master as of commit 88790291ddc00bfa18d3f7bcc0825b1ce14cb490.
Comment 1 Commit Notification 2023-08-01 11:12:13 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3bb762c53ea79f8915a1b8fa39f3f5f57aa68c84

tdf#156100 tdf#156561 Revert to previous behavior for gtk popups

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-01 11:15:15 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1d92445fcac1c51c17d8dbfd1a4017430fe7bc46

tdf#156561 wina11y: Handle CHILD event

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-08-02 10:50:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/cd85126bb6b520abb2f40221fd6097dc2ddad672

tdf#156100 tdf#156561 Revert to previous behavior for gtk popups

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-02 10:50:50 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2c11a18897225a89df99869c702c0cd91ed9e11b

tdf#156100 tdf#156561 Revert to previous behavior for gtk popups

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-08-18 04:06:10 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d27d2c5f9d83112b6db9b6234e2ae617ffced22

tdf#141101 tdf#156561 a11y: Handle a11y child events in win parent

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-08-18 04:06:13 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2cd1408dd7d6688357257f4a58a8b467628b1884

tdf#156561 a11y: Create VCLXTopWindow peer for border win frame

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-08-18 04:06:15 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/581427c2d62f6bde5b843a1f89fea1914583b96a

tdf#156561 a11y: Don't ignore child events in AccessibleListBox

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-08-18 04:06:17 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e8028cbc11661effbb38ecb6146b9a9557b650da

tdf#156561 svtools, a11y: Return created popup win for focus handling

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-08-18 04:06:19 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/230789766b364bf995e6659dd589cdf902c69f2c

tdf#156561 tdf#141101 Revert "tdf#140762 tdf#152671 Make dock win ..." et al

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Weghorn 2023-08-18 06:25:53 UTC
This is done now.
Comment 11 futurefuture 2023-08-18 13:13:04 UTC Comment hidden (spam)
Comment 12 futurefuture 2023-08-21 09:05:10 UTC Comment hidden (spam)
Comment 13 futurefuture 2023-08-28 15:43:28 UTC Comment hidden (spam)
Comment 14 futurefuture 2023-08-29 13:29:03 UTC Comment hidden (spam)