tdf#156561 wina11y: Handle CHILD event

So far, `AccessibleEventId::CHILD` events were ignored by
`AccComponentEventListener` and its base class,
`AccEventListener`.
As a result, no event listener would be created when
e.g. a child that was previously hidden got shown,
resulting e.g. in NVDA not announcing that object
when it receives focus later.

Handle the event and register a listener when notified
about a new child and drop the old child when one gets
removed, like some of the derived classes already do
in pretty much the same way.
(Those implementations will be cleaned up/dropped
in a separate commit.)

This addresses one of the root causes of why
tdf#140762 ("No text spoken by screen reader for 'Borders'
dropdown button items in Calc's formatting toolbar (NVDA on Windows)")
occured without

    commit dc0706cabfe39ddb6ea23d60ccfb756f2b9e6efb
    Author: Michael Weghorn <m.weghorn@posteo.de>
    Date:   Wed Mar 15 17:00:27 2023 +0100

        tdf#140762 tdf#152671 Make dock win visible before showing popup

, i.e. when the window is made visible only after its
parent.

Still, this change at least by itself does not yet solve
tdf#152671 ("ui, accessibility: auto filter drop down menu is not
spoken by the screen reader") and also for the case of the
toolbar popup, the initially focused item would no more
be announced when reverting the above-mentioned commit and
its follow-up commit

    commit 57c2209dd04abfda90e0aba782bc174243633ec9
    Author: Caolán McNamara <caolanm@redhat.com>
    Date:   Thu Apr 6 15:07:15 2023 +0100

        tdf#154470 try moving the Show of the client to after the float positioning

Example backtrace of the font color popup in the formatting
toolbar where no event listener was created previously:

    1   AccEventListener::notifyEvent                                 AccEventListener.cxx          74   0x7ffe4b4ecf14
    2   AccComponentEventListener::notifyEvent                        AccComponentEventListener.cxx 82   0x7ffe4b4ee699
    3   comphelper::AccessibleEventNotifier::addEvent                 accessibleeventnotifier.cxx   256  0x7ffe5e80ebac
    4   comphelper::OCommonAccessibleComponent::NotifyAccessibleEvent accessiblecomponenthelper.cxx 127  0x7ffe5e80443e
    5   VCLXAccessibleToolBoxItem::NotifyChildEvent                   vclxaccessibletoolboxitem.cxx 213  0x7ffe4b337e10
    6   VCLXAccessibleToolBox::UpdateCustomPopupItemp_Impl            vclxaccessibletoolbox.cxx     373  0x7ffe4b33334d
    7   VCLXAccessibleToolBox::ProcessWindowEvent                     vclxaccessibletoolbox.cxx     547  0x7ffe4b33263c
    8   VCLXAccessibleComponent::WindowEventListener                  vclxaccessiblecomponent.cxx   112  0x7ffe51e871c5
    9   VCLXAccessibleComponent::LinkStubWindowEventListener          vclxaccessiblecomponent.cxx   98   0x7ffe51e861f6
    10  Link<VclWindowEvent &,void>::Call                             link.hxx                      111  0x7ffe504204b3
    11  vcl::Window::CallEventListeners                               event.cxx                     263  0x7ffe50420860
    12  svt::PopupWindowControllerImpl::WindowEventListener           popupwindowcontroller.cxx     148  0x7ffe53c65593
    13  svt::PopupWindowControllerImpl::LinkStubWindowEventListener   popupwindowcontroller.cxx     89   0x7ffe53c64f76
    14  Link<VclWindowEvent &,void>::Call                             link.hxx                      111  0x7ffe504204b3
    15  vcl::Window::CallEventListeners                               event.cxx                     263  0x7ffe50420860
    16  vcl::Window::ImplResetReallyVisible                           stacking.cxx                  723  0x7ffe5033d6f1
    17  vcl::Window::Show                                             window.cxx                    2234 0x7ffe5053eca7
    18  ImplDockingWindowWrapper::ImplPreparePopupMode                dockmgr.cxx                   769  0x7ffe5041154e
    19  ImplDockingWindowWrapper::StartPopupMode                      dockmgr.cxx                   816  0x7ffe50413d4c
    20  DockingManager::StartPopupMode                                dockmgr.cxx                   349  0x7ffe50413c11
    ... <More>

Change-Id: I62ab32342ef67c770ced9f0d2be867dc9355bd4a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155126
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>