winaccessibility/inc/AccContainerEventListener.hxx
@@ -47,7 +47,7 @@ public:
 
     //for child changed event
     virtual void HandleChildChangedEvent(
-            css::uno::Any oldValue, css::uno::Any newValue);
+            css::uno::Any oldValue, css::uno::Any newValue) override;
 
     //for selection changed event
     virtual void HandleSelectionChangedEvent(
