winaccessibility/inc/AccMenuEventListener.hxx
@@ -41,7 +41,7 @@ public:
     notifyEvent(const css::accessibility::AccessibleEventObject& aEvent) override;
 
     //for child changed event
-    virtual void HandleChildChangedEvent(css::uno::Any oldValue, css::uno::Any newValue);
+    virtual void HandleChildChangedEvent(css::uno::Any oldValue, css::uno::Any newValue) override;
 
     //for selection changed event
     virtual void HandleSelectionChangedEventNoArgs();
